partially updated desktop client which works for UserID and passwd but not CILogon