@@ -11,7 +11,7 @@
 
     <properties>
         <!-- Airavata version-->
-        <airavata.version>0.19-SNAPSHOT</airavata.version>
+        <airavata.version>0.20-SNAPSHOT</airavata.version>
 
         <!-- Installer Filename without suffix -->
         <!--<app.filename>SEAGridDesktop</app.filename>-->
@@ -53,6 +53,8 @@
         <app.installerdir>${project.build.directory}/installer</app.installerdir>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javassist.version>3.24.1-GA</javassist.version>
+
     </properties>
 
     <profiles>
@@ -69,7 +71,11 @@
                         <version>3.3</version>
                         <configuration>
                             <source>1.8</source>
-                            <target>1.8</target>
+                            <target>16</target>
+                            <compilerArgs>
+                                <arg>--add-modules</arg>
+                                <arg>java.xml.bind</arg>
+                            </compilerArgs>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -111,7 +117,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>1.4.0</version>
+                        <version>3.0.0</version>
                         <!-- Generate app.xml manifest -->
                         <executions>
                             <execution>
@@ -130,6 +136,7 @@
 
                                     </arguments>
                                 </configuration>
+                                
                             </execution>
                             <!-- Embed app.xml inside fxlauncher.xml so we don't need to reference app.xml to start the app -->
                             <execution>
@@ -142,7 +149,7 @@
                                     <executable>jar</executable>
                                     <workingDirectory>${app.dir}</workingDirectory>
                                     <arguments>
-                                        <argument>uf</argument>
+                                        <argument>uef</argument>
                                         <argument>fxlauncher.jar</argument>
                                         <argument>app.xml</argument>
 
@@ -156,34 +163,41 @@
                                 <id>installer</id>
                                 <phase>install</phase>
                                 <goals>
-                                    <goal>exec</goal>
+                                    <goal>java</goal>
                                 </goals>
                                 <configuration>
-                                    <executable>${env.JAVA_HOME}/bin/javapackager</executable>
+                                    <executable>${env.JAVA_HOME}/bin/jpackage</executable>
                                     <arguments>
-                                        <argument>-deploy</argument>
+                                        <!-- argument>-deploy</argument>
                                         <argument>-native</argument>
-                                        <argument>-outdir</argument>
-                                        <argument>${app.installerdir}</argument>
-                                        <argument>-outfile</argument>
-                                        <argument>${app.filename}</argument>
-                                        <argument>-srcdir</argument>
-                                        <argument>${app.dir}</argument>
-                                        <argument>-srcfiles</argument>
-                                        <argument>fxlauncher.jar</argument>
-                                        <argument>-appclass</argument>
-                                        <argument>fxlauncher.Launcher</argument>
-                                        <argument>-name</argument>
-                                        <argument>${project.name}</argument>
-                                        <argument>-title</argument>
-                                        <argument>${project.name}</argument>
-                                        <argument>-vendor</argument>
-                                        <argument>${app.vendor}</argument>
-                                        <argument>-BappVersion=${app.version}</argument>
-                                        <argument>-Bicon=${app.icon}</argument>
-                                        <argument>-Bmac.signing-key-user-name=${app.vendor}</argument>
+                                        <argument>-outdir</argument -->
+                                        <argument>--type app-image</argument>
+                                        <argument> -d distribution</argument>
+                                        <argument> -i target/app</argument>
+                                        <!-- argument>${app.filename}</argument -->
+                                        <!-- argument>-\-input ${app.dir} </argument -->
+                                        <!-- argument>${app.dir}</argument -->
+                                        <!-- argument> - install-dir '${app.installerdir}'</argument-->
+                                        <!-- argument>-srcfiles</argument -->
+                                        <argument>--main-jar fxlauncher.jar</argument>
+                                        <argument>--main-class xlauncher.Launcher </argument>
+                                        <!-- argument>org.seagrid.desktop.SEAGridDesktop fxlauncher.Launcher</argument --> 
+                                        <argument>--name {project.name}</argument>
+                                        <!-- argument>${project.name}</argument -->
+                                        <!-- argument>-title</argument>
+                                        <argument>${project.name}</argument -->
+                                        <argument> -p  "$PATH_TO_FX" </argument>
+
+                                        <argument>--vendor ${app.vendor}</argument>
+                                        <argument>--add-modules javafx.controls,javafx.fxml</argument>
+                                        <!-- argument>${app.vendor}</argument -->
+                                        <!-- argument> app-version  ${app.version}</argument -->
+                                        <!-- argument>-BappVersion=${app.version}</argument -->
+                                        <!-- argument>-\-icon ${app.icon}</argument -->
+                                        <argument>--mac-signing-key-user-name ${app.vendor}</argument>
                                     </arguments>
                                 </configuration>
+                                 
                             </execution>
                             <!-- Copy application artifacts to remote site using scp (optional) -->
                             <execution>
@@ -201,6 +215,9 @@
                                 </configuration>
                             </execution>
                         </executions>
+                        <configuration>
+                            <mainClass>org.seagrid.desktop.SEAGridDesktop</mainClass>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -209,8 +226,19 @@
                         <configuration>
                             <source>1.8</source>
                             <target>1.8</target>
+                            <sources>
+                                  <source>/Users/spamidig/Documents/Professional/Work_home/git/seagrid-rich-client/jamberoo-libs</source>
+                                </sources>
+
                         </configuration>
+                         
                     </plugin>
+                    <plugin>
+		        <groupId>org.openjfx</groupId>
+		        <artifactId>javafx-maven-plugin</artifactId>
+		        <version>0.0.6</version>
+		        <!-- configuration> <mainClass>HelloFX</mainClass> </configuration -->
+                   </plugin>
                 </plugins>
             </build>
         </profile>
@@ -250,14 +278,64 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>8.40.10</version>
+            <version>11.1.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-fxml</artifactId>
+    <version>14</version>
+    <type>pom</type>
+</dependency>
+<dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-web</artifactId>
+    <version>14</version>
+    <type>pom</type>
+</dependency>
+ 
+  <dependency>
+    <groupId>org.openjfx</groupId>
+    <artifactId>javafx-controls</artifactId>
+    <version>14</version>
+  </dependency>
+<!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+
+<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+ 
+
+<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
+<dependency>
+    <groupId>org.glassfish.jaxb</groupId>
+    <artifactId>jaxb-runtime</artifactId>
+    <version>2.3.2</version>
+</dependency>
+<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
+            <version>1.2.0</version>
         </dependency>
 
         <!--OAuth Dependencies-->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.8.5</version>
+            <version>1.9.13</version>
         </dependency>
         <dependency>
             <groupId>org.apache.oltu.oauth2</groupId>
@@ -287,18 +365,30 @@
 
 
         <!-- Google Guava -->
-        <dependency>
+        <!-- dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
-        </dependency>
+        </dependency -->
+<dependency>
+	<groupId>com.google.guava</groupId>
+	<artifactId>guava</artifactId>
+	<version>30.1.1-jre</version>
+</dependency>
+<!-- Thanks for using https://jar-download.com -->
 
         <!-- Logging  -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.12</version>
+            <version>1.7.31</version>
         </dependency>
+<!-- https://mvnrepository.com/artifact/log4j/log4j >
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency -->
 
         <!-- Jamberoo dependencies -->
         <dependency>
@@ -306,6 +396,12 @@
             <artifactId>bsh-2.0b4</artifactId>
             <version>1.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/bsh/bsh -->
+<!-- dependency>
+    <groupId>bsh</groupId>
+    <artifactId>bsh</artifactId>
+    <version>2.0b4</version>
+</dependency -->
         <dependency>
             <groupId>jamberoo</groupId>
             <artifactId>cct-globus</artifactId>
